hdone/objects/HitSettingType__mdt.object
<CustomObject>
    <description>Hit Setting Type assignment</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Generic number field</description>
        <inlineHelpText>Generic number field</inlineHelpText>
        <label>Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Percentage__c</fullName>
        <description>HIT Approval Percentage</description>
        <inlineHelpText>HIT Approval Percentage</inlineHelpText>
        <label>Approval Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AuditSettingInstruction__c</fullName>
        <description>As of Summer 17 could not delete MDT objects. Had created AuditSettingInstruction prev. Using for Mturk Title</description>
        <inlineHelpText>MTurk Title</inlineHelpText>
        <label>Title</label>
        <referenceTo>AuditSettingInstruction__mdt</referenceTo>
        <relationshipLabel>HitSettingTypes</relationshipLabel>
        <relationshipName>HitSettingTypes</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Comparator1__c</fullName>
        <description>Values for Custom Qualification</description>
        <inlineHelpText>Values for Custom Qualification</inlineHelpText>
        <label>Comparator1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EqualTo</fullName>
                    <default>true</default>
                    <label>EqualTo</label>
                </value>
                <value>
                    <fullName>NotEqualTo</fullName>
                </value>
                <value>
                    <fullName>GreaterThanOrEqualTo</fullName>
                </value>
                <value>
                    <fullName>LessThanOrEqualTo</fullName>
                </value>
                <value>
                    <fullName>LessThan</fullName>
                </value>
                <value>
                    <fullName>GreaterThan</fullName>
                </value>
                <value>
                    <fullName>Exists</fullName>
                </value>
                <value>
                    <fullName>DoesNotExist</fullName>
                </value>
                <value>
                    <fullName>In</fullName>
                </value>
                <value>
                    <fullName>NotIn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Qualification1__c</fullName>
        <description>Custom qualification Id</description>
        <inlineHelpText>Custom qualification Id</inlineHelpText>
        <label>Custom Qualification1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Qualification_Score1__c</fullName>
        <description>Custom qualification score</description>
        <inlineHelpText>Custom qualification score</inlineHelpText>
        <label>Custom Qualification Score1</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>HIT Description</description>
        <inlineHelpText>HIT Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Length in minutes</description>
        <inlineHelpText>Length in minutes</inlineHelpText>
        <label>Duration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <description>Instructions for HIT Setting</description>
        <inlineHelpText>Instructions for HIT Setting</inlineHelpText>
        <label>Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <description>Keywords for HIT. Free form text so must add commas to separate words</description>
        <inlineHelpText>Keywords for HIT.</inlineHelpText>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifetime__c</fullName>
        <description>Lifetime in hours</description>
        <inlineHelpText>Lifetime in hours</inlineHelpText>
        <label>Lifetime</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Long_Text_Area_Questions__c</fullName>
        <description>Creates multi select picklist for long text area questions. Must use 1;2;3 type format</description>
        <inlineHelpText>Creates multi select picklist for long text area questions. Must use 1;2;3 type format</inlineHelpText>
        <label>Long Text Area Questions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Bonus__c</fullName>
        <description>Max bonus if applicable for Hit Setting</description>
        <inlineHelpText>Max bonus if applicable for Hit Setting</inlineHelpText>
        <label>Max Bonus</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Assignments__c</fullName>
        <description>Maximum Assignments</description>
        <label>Maximum Assignments</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Hits_Approved__c</fullName>
        <description>Minimum HITS approved</description>
        <inlineHelpText>Minimum HITS approved</inlineHelpText>
        <label>Min Hits Approved</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ObjectDate__c</fullName>
        <description>Generic Date Field</description>
        <inlineHelpText>Generic Date Field</inlineHelpText>
        <label>ObjectDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>Payment Type for HIT Setting</description>
        <inlineHelpText>Payment Type for HIT Setting</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Bonus</fullName>
                    <default>true</default>
                    <label>Auto Bonus</label>
                </value>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
                <value>
                    <fullName>Manual Bonus</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductObjectIdLookup__c</fullName>
        <label>ProductObjectIdLookup</label>
        <referenceTo>ProductObjectIdLookup__mdt</referenceTo>
        <relationshipLabel>HitSettingTypes</relationshipLabel>
        <relationshipName>HitSettingTypes</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Product_Object__c</fullName>
        <description>Product and object associated with record</description>
        <inlineHelpText>Product and object associated with record</inlineHelpText>
        <label>Product Object</label>
        <referenceTo>Product_Object__mdt</referenceTo>
        <relationshipLabel>HitSettingTypes</relationshipLabel>
        <relationshipName>HitSettingTypes</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Sf2SfSetting__c</fullName>
        <label>Sf2SfSetting</label>
        <referenceTo>Sf2SfSetting__mdt</referenceTo>
        <relationshipLabel>HitSettingTypes</relationshipLabel>
        <relationshipName>HitSettingTypes</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <referenceTo>Category__mdt</referenceTo>
        <relationshipLabel>HitSettingTypes</relationshipLabel>
        <relationshipName>HitSettingTypes</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>HitSettingType</label>
    <pluralLabel>HitSettingTypes</pluralLabel>
</CustomObject>